# Market-Research-and-AI

./: .env  Deloitte_AI_Assignment.md  McKinsey_AI_Assignment.md  Nextcode_AI_Assignment.md  README.md  app.py  pyproject.toml
